--- a/Phase_1/Phase1_Topic3_Data_Analysis_in_Base_Python/3_DataAnalysisWithJSONs/Data_Analysis_with_JSON.ipynb
+++ b/Phase_1/Phase1_Topic3_Data_Analysis_in_Base_Python/3_DataAnalysisWithJSONs/Data_Analysis_with_JSON.ipynb
@@ -36,6 +36,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'abc' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m abc\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'abc' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "abc\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "slideshow": {
@@ -1512,9 +1533,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "dplearn",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "dplearn"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1526,7 +1547,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.11.5"
   },
   "toc": {
    "base_numbering": 1,
