--- a/Phase_1/Phase1_Topic3_Data_Analysis_in_Base_Python/3_DataAnalysisWithJSONs/Data_Analysis_with_JSON.ipynb
+++ b/Phase_1/Phase1_Topic3_Data_Analysis_in_Base_Python/3_DataAnalysisWithJSONs/Data_Analysis_with_JSON.ipynb
@@ -36,23 +36,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "ename": "NameError",
-     "evalue": "name 'abc' is not defined",
+     "evalue": "name 'abc123' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m abc\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'abc' is not defined"
+      "Cell \u001b[1;32mIn[2], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m abc123\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'abc123' is not defined"
      ]
     }
    ],
    "source": [
-    "abc\n"
+    "abc123\n"
    ]
   },
   {
