--- a/Phase_1/Phase1_Topic3_Data_Analysis_in_Base_Python/3_DataAnalysisWithJSONs/Data_Analysis_with_JSON.ipynb
+++ b/Phase_1/Phase1_Topic3_Data_Analysis_in_Base_Python/3_DataAnalysisWithJSONs/Data_Analysis_with_JSON.ipynb
@@ -5385,14 +5385,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {
     "hidden": true,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'json' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdata/plants.json\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[1;32m----> 2\u001b[0m     plants \u001b[38;5;241m=\u001b[39m json\u001b[38;5;241m.\u001b[39mload(f)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'json' is not defined"
+     ]
+    }
+   ],
    "source": [
     "with open('data/plants.json', 'r') as f:\n",
     "    plants = json.load(f)"
