--- a/Phase_1/Phase1_Topic5_Data_Cleaning_in_Pandas/1_PandasDataCleaning/3_Pandas_LambdaFunc.ipynb
+++ b/Phase_1/Phase1_Topic5_Data_Cleaning_in_Pandas/1_PandasDataCleaning/3_Pandas_LambdaFunc.ipynb
@@ -414,9 +414,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "dplearn",
+   "display_name": "learn-env",
    "language": "python",
-   "name": "dplearn"
+   "name": "learn-env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -428,7 +428,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
