--- a/Phase_1/Phase1_Topic3_Data_Analysis_in_Base_Python/1_PythonDataManipulation/Python_Data_Manipulation.ipynb
+++ b/Phase_1/Phase1_Topic3_Data_Analysis_in_Base_Python/1_PythonDataManipulation/Python_Data_Manipulation.ipynb
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "hidden": true,
     "slideshow": {
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "cell_style": "split",
     "hidden": true,
@@ -226,7 +226,7 @@
        "[4, 6, 10, 14, 22, 26, 34, 38]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "cell_style": "split",
     "slideshow": {
@@ -251,7 +251,7 @@
        "[9]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "cell_style": "split",
     "hidden": true,
@@ -296,7 +296,18 @@
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[4, 6, 10, 14, 22, 26, 34, 38]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "prime_doubles2 = []\n",
     "for prime in primes:\n",
@@ -306,27 +317,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "cell_style": "split",
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[4, 6, 10, 14, 22, 26, 34, 38]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "prime_doubles = [x*2 for x in primes]"
+    "prime_doubles = [x*2 for x in primes]\n",
+    "prime_doubles"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "prime_doubles == prime_doubles2"
    ]
@@ -371,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {
     "cell_style": "center",
     "hidden": true,
@@ -391,7 +425,7 @@
        " ['Andrew', 'Ng']]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2192,7 +2226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "metadata": {
     "hidden": true,
     "slideshow": {
@@ -2206,7 +2240,7 @@
        "{'model1': 0.858, 'model2': 0.873, 'model3': 0.868}"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2243,7 +2277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "metadata": {
     "hidden": true,
     "slideshow": {
@@ -2258,7 +2292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 16,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -2274,13 +2308,14 @@
        " 'Thailand': 'Bangkok'}"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dict(zip(list1, list2))"
+    "dict(zip(list1, list2))\n",
+    "#{k:v for k,v in zip(list1,list2)}"
    ]
   },
   {
@@ -2318,7 +2353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 18,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -2331,7 +2366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 19,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -2347,7 +2382,7 @@
        " 'Neo': 'fictional character'}"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2797,7 +2832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 20,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -2807,10 +2842,10 @@
     {
      "data": {
       "text/plain": [
-       "1"
+       "3"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2823,7 +2858,7 @@
     "        num/=2\n",
     "        ctr+=1\n",
     "    return ctr\n",
-    "div2(50)\n"
+    "div2(8)\n"
    ]
   },
   {
