--- a/Phase_1/Phase1_Topic3_Data_Analysis_in_Base_Python/2_DataAnalysisWithCSVs/Data_Analysis_with_CSVs.ipynb
+++ b/Phase_1/Phase1_Topic3_Data_Analysis_in_Base_Python/2_DataAnalysisWithCSVs/Data_Analysis_with_CSVs.ipynb
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -284,13 +284,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Banana Chips Sweetened (Whole),,2017-03-09,2017-03-09,28.0 g,2243.0,28.57,64.29,14.29,3.57\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# This code prints the second line of the CSV file\n",
     "\n",
@@ -425,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -449,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -485,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -493,14 +502,16 @@
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'csv_file_path' is not defined",
+     "ename": "UnicodeDecodeError",
+     "evalue": "'charmap' codec can't decode byte 0x81 in position 5206: character maps to <undefined>",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m products \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(csv_file_path) \u001b[38;5;28;01mas\u001b[39;00m csvfile:\n\u001b[0;32m      4\u001b[0m     reader \u001b[38;5;241m=\u001b[39m csv\u001b[38;5;241m.\u001b[39mDictReader(csvfile)\n\u001b[0;32m      5\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m row \u001b[38;5;129;01min\u001b[39;00m reader:\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'csv_file_path' is not defined"
+      "\u001b[1;31mUnicodeDecodeError\u001b[0m                        Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[6], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(csv_file_path) \u001b[38;5;28;01mas\u001b[39;00m csvfile:\n\u001b[0;32m      4\u001b[0m     reader \u001b[38;5;241m=\u001b[39m csv\u001b[38;5;241m.\u001b[39mDictReader(csvfile)\n\u001b[1;32m----> 5\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m row \u001b[38;5;129;01min\u001b[39;00m reader:\n\u001b[0;32m      6\u001b[0m         products\u001b[38;5;241m.\u001b[39mappend(row)\n",
+      "File \u001b[1;32m~\\anaconda3\\Lib\\csv.py:111\u001b[0m, in \u001b[0;36mDictReader.__next__\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    108\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mline_num \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m    109\u001b[0m     \u001b[38;5;66;03m# Used only for its side effect.\u001b[39;00m\n\u001b[0;32m    110\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfieldnames\n\u001b[1;32m--> 111\u001b[0m row \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mnext\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mreader)\n\u001b[0;32m    112\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mline_num \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mreader\u001b[38;5;241m.\u001b[39mline_num\n\u001b[0;32m    114\u001b[0m \u001b[38;5;66;03m# unlike the basic reader, we prefer not to return blanks,\u001b[39;00m\n\u001b[0;32m    115\u001b[0m \u001b[38;5;66;03m# because we will typically wind up with a dict full of None\u001b[39;00m\n\u001b[0;32m    116\u001b[0m \u001b[38;5;66;03m# values\u001b[39;00m\n",
+      "File \u001b[1;32m~\\anaconda3\\Lib\\encodings\\cp1252.py:23\u001b[0m, in \u001b[0;36mIncrementalDecoder.decode\u001b[1;34m(self, input, final)\u001b[0m\n\u001b[0;32m     22\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mdecode\u001b[39m(\u001b[38;5;28mself\u001b[39m, \u001b[38;5;28minput\u001b[39m, final\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m):\n\u001b[1;32m---> 23\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m codecs\u001b[38;5;241m.\u001b[39mcharmap_decode(\u001b[38;5;28minput\u001b[39m,\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39merrors,decoding_table)[\u001b[38;5;241m0\u001b[39m]\n",
+      "\u001b[1;31mUnicodeDecodeError\u001b[0m: 'charmap' codec can't decode byte 0x81 in position 5206: character maps to <undefined>"
      ]
     }
    ],
@@ -515,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -557,7 +568,7 @@
        "  'proteins_100g': '17.86'}]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -591,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {
     "cell_style": "center",
     "slideshow": {
@@ -614,7 +625,7 @@
        " 'proteins_100g': '3.57'}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -660,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -673,7 +684,7 @@
        "14.29"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -685,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -698,7 +709,7 @@
        "28.0"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -710,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -732,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -751,7 +762,7 @@
        " 'serving_size_g': 28.0}"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -807,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -860,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -885,7 +896,7 @@
        " 'created_month': 3}"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -929,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 29,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -983,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -996,7 +1007,7 @@
        "1181.9687873138237"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1039,7 +1050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 31,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1052,15 +1063,14 @@
        "22.398214438273847"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "## Your work here\n",
-    "#sugar = [product['sugars_100g'] for product in products if product['energy_100g']>1000]\n",
-    "#sum(sugar)/len(sugar)\n",
+    "\n",
     "\n",
     "prods_over_1000cal = [product for product in products if product['energy_100g'] > 1000]\n",
     "sugar = [product['sugars_100g'] for product in prods_over_1000cal]\n",
@@ -1099,7 +1109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 12,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1112,7 +1122,7 @@
        "{2016: 55, 2017: 47574, 2012: 2, 2013: 15, 2014: 14, 2015: 77}"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1121,8 +1131,8 @@
     "## Your work here\n",
     "prod_year_count = {}\n",
     "list_created_years = [product['created_year'] for product in products]\n",
-    "uniqyr = set(list_created_years)\n",
-    "for unique_year in uniqyr:\n",
+    "uniqprodyr = set(list_created_years)\n",
+    "for unique_year in uniqprodyr:\n",
     "    numyr = len([year for year in list_created_years if year == unique_year])\n",
     "    prod_year_count[unique_year]=numyr\n",
     "prod_year_count    "
@@ -1307,7 +1317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 13,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1320,7 +1330,7 @@
        "Counter({2017: 47574, 2015: 77, 2016: 55, 2013: 15, 2014: 14, 2012: 2})"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1392,7 +1402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 15,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1405,7 +1415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 16,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1436,7 +1446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 18,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1456,15 +1466,15 @@
        " 'carbohydrates_100g': 64.29,\n",
        " 'sugars_100g': 14.29,\n",
        " 'proteins_100g': 3.57,\n",
-       " 'serving_size_g': 28.0,\n",
        " 'created_year': 2017,\n",
        " 'created_month': 3,\n",
+       " 'serving_size_g': 28.0,\n",
        " 'clean_date': datetime.datetime(2017, 3, 9, 0, 0),\n",
        " 'last_modified_year': 2017,\n",
        " 'last_modified_month': 3}"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
