--- a/Phase_1/Phase1_Topic5_Data_Cleaning_in_Pandas/2_AggregatingCombiningDataFrames/Aggregating_Combining_DataFrames.ipynb
+++ b/Phase_1/Phase1_Topic5_Data_Cleaning_in_Pandas/2_AggregatingCombiningDataFrames/Aggregating_Combining_DataFrames.ipynb
@@ -284,7 +284,7 @@
     {
      "data": {
       "text/plain": [
-       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x0000027ECE37C050>"
+       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x0000013848A11750>"
       ]
      },
      "execution_count": 2,
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "4e3c2a6d",
    "metadata": {
     "scrolled": true,
@@ -591,7 +591,127 @@
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Survived</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Fare</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-0.482185</td>\n",
+       "      <td>-0.594531</td>\n",
+       "      <td>-0.423612</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.588670</td>\n",
+       "      <td>0.714684</td>\n",
+       "      <td>0.462147</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.588670</td>\n",
+       "      <td>-0.135768</td>\n",
+       "      <td>-0.630280</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.588670</td>\n",
+       "      <td>0.502071</td>\n",
+       "      <td>0.148630</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-0.482185</td>\n",
+       "      <td>0.291136</td>\n",
+       "      <td>-0.405067</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>886</th>\n",
+       "      <td>-0.482185</td>\n",
+       "      <td>-0.253890</td>\n",
+       "      <td>-0.290320</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>887</th>\n",
+       "      <td>0.588670</td>\n",
+       "      <td>-0.631865</td>\n",
+       "      <td>-0.249662</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>888</th>\n",
+       "      <td>-1.693335</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-0.362597</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>889</th>\n",
+       "      <td>2.070299</td>\n",
+       "      <td>-0.322018</td>\n",
+       "      <td>0.103762</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>890</th>\n",
+       "      <td>-0.482185</td>\n",
+       "      <td>0.086751</td>\n",
+       "      <td>-0.412022</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>891 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Survived       Age      Fare\n",
+       "0   -0.482185 -0.594531 -0.423612\n",
+       "1    0.588670  0.714684  0.462147\n",
+       "2    0.588670 -0.135768 -0.630280\n",
+       "3    0.588670  0.502071  0.148630\n",
+       "4   -0.482185  0.291136 -0.405067\n",
+       "..        ...       ...       ...\n",
+       "886 -0.482185 -0.253890 -0.290320\n",
+       "887  0.588670 -0.631865 -0.249662\n",
+       "888 -1.693335       NaN -0.362597\n",
+       "889  2.070299 -0.322018  0.103762\n",
+       "890 -0.482185  0.086751 -0.412022\n",
+       "\n",
+       "[891 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "titanic_subset.groupby('Sex').transform(lambda col: (col - col.mean())/col.std())"
    ]
