--- a/Phase_3/Phase3_Topic9_Classification_Metrics/Supplements/Classification_Metrics_Code_Appendix.ipynb
+++ b/Phase_3/Phase3_Topic9_Classification_Metrics/Supplements/Classification_Metrics_Code_Appendix.ipynb
@@ -158,72 +158,175 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "d18f2102",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[2, 0, 0],\n",
+       "       [1, 0, 1],\n",
+       "       [0, 2, 0]], dtype=int64)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Create confusion matrix\n"
+    "# Create confusion matrix\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "confusion_matrix(y_true, y_pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "2c5c7443",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.3333333333333333"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Calculate the accuracy rate\n"
+    "# Calculate the accuracy rate\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "accuracy_score(y_true, y_pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "a7663080",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.66666667, 0.        , 0.        ])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Calculate the precision\n"
+    "# Calculate the precision\n",
+    "from sklearn.metrics import precision_score\n",
+    "\n",
+    "# Assume model is trained and prediction is made\n",
+    "precision_score(y_true, y_pred, average=None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "ce8feffb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1., 0., 0.])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Calculate the recall\n"
+    "# Calculate the recall\n",
+    "from sklearn.metrics import recall_score\n",
+    "\n",
+    "# Assume model is trained and prediction is made\n",
+    "recall_score(y_true, y_pred, average=None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "3529cc7e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.8, 0. , 0. ])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Calculate the F-score\n"
+    "# Calculate the F-score\n",
+    "from sklearn.metrics import f1_score\n",
+    "\n",
+    "# Assume model is trained and prediction is made\n",
+    "f1_score(y_true, y_pred, average=None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "0917acf1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.98113208, 0.        , 0.        ])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Calculate the F_beta-score with beta = 5\n"
+    "# Calculate the F_beta-score with beta = 5\n",
+    "from sklearn.metrics import fbeta_score\n",
+    "\n",
+    "# Assume model is trained and prediction is made\n",
+    "fbeta_score(y_true, y_pred, average=None, beta=5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "64e3bf07",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'              precision    recall  f1-score   support\\n\\n           0       0.67      1.00      0.80         2\\n           1       0.00      0.00      0.00         2\\n           2       0.00      0.00      0.00         2\\n\\n    accuracy                           0.33         6\\n   macro avg       0.22      0.33      0.27         6\\nweighted avg       0.22      0.33      0.27         6\\n'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Use the calssification report for summary\n"
+    "# Use the calssification report for summary\n",
+    "from sklearn.metrics import classification_report\n",
+    "\n",
+    "# Assume model is trained and prediction is made\n",
+    "classification_report(y_true, y_pred)"
    ]
   },
   {
@@ -299,7 +402,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.11.5"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
