--- a/Phase_2/Phase2_Topic6_Central_Limit_Theorem_and_Confidence_Intervals/Confidence_Intervals_Code_Appendix.ipynb
+++ b/Phase_2/Phase2_Topic6_Central_Limit_Theorem_and_Confidence_Intervals/Confidence_Intervals_Code_Appendix.ipynb
@@ -282,9 +282,9 @@
  "metadata": {
   "hide_input": false,
   "kernelspec": {
-   "display_name": "dplearn",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "dplearn"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -296,7 +296,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.11.5"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
