--- a/Phase_2/Phase2_Topic7_Hypothesis_Testing/1_Z-Tests/hypothesis_testing_z-test.ipynb
+++ b/Phase_2/Phase2_Topic7_Hypothesis_Testing/1_Z-Tests/hypothesis_testing_z-test.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1444,7 +1444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "cell_style": "split",
     "hidden": true,
@@ -1452,7 +1452,15 @@
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.0\n"
+     ]
+    }
+   ],
    "source": [
     "z_score = (73 - 65)/4\n",
     "print(z_score)"
@@ -1460,14 +1468,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "cell_style": "split",
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.006209665325776159"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#p_value = stats.norm.sf(2.5)\n",
     "p_value =1-stats.norm.cdf(2.5)\n",
@@ -1530,14 +1549,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "hidden": true,
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.3499999999999943"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sample_female_heights = [68, 65, 69, 70, 70, \n",
     "                         61, 59, 65, 64, 66,\n",
@@ -1563,14 +1593,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "hidden": true,
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9906132944651613\n",
+      "0.009386705534838714\n"
+     ]
+    }
+   ],
    "source": [
     "# we can use stats to calculate the percentile\n",
     "print(stats.norm.cdf(z))\n",
@@ -1610,14 +1649,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "cell_style": "split",
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.009386705534838714, False)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "p = stats.norm.sf(z)\n",
     "alpha = .05\n",
@@ -1625,7 +1675,7 @@
     "    H0 = True \n",
     "else:\n",
     "    H0 = False    \n",
-    "H0"
+    "p, H0"
    ]
   },
   {
@@ -1774,14 +1824,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "142.30249470757707"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# denominator = sigma/root n\n",
+    "900/(np.sqrt(40))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1816,14 +1880,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-2.550904063590173"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(8637-9000)/142.30249"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1869,15 +1946,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "cell_style": "split",
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.005371506876180265"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#p = stats.norm.cdf(-2.5509486999) or other option\n",
+    "p = 1 - stats.norm.cdf(abs(-2.5509486999297257)) \n",
+    "p"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1916,15 +2008,17 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "p = 0.005 < alpha (0.05), so we reject the null hypothesis."
+   ]
   }
  ],
  "metadata": {
   "hide_input": false,
   "kernelspec": {
-   "display_name": "dplearn",
+   "display_name": "learn-env",
    "language": "python",
-   "name": "dplearn"
+   "name": "learn-env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1936,7 +2030,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.11.5"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
