--- a/Phase_3/Phase3_Topic5_InferenceVSPrediction/Inference_vs_Prediction_1.ipynb
+++ b/Phase_3/Phase3_Topic5_InferenceVSPrediction/Inference_vs_Prediction_1.ipynb
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "hidden": true,
     "slideshow": {
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {
     "hidden": true,
     "slideshow": {
@@ -742,8 +742,99 @@
        "      <td>1680</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>263000018</th>\n",
+       "      <td>360000.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2.50</td>\n",
+       "      <td>1530</td>\n",
+       "      <td>1131</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1530</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6600060120</th>\n",
+       "      <td>400000.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2.50</td>\n",
+       "      <td>2310</td>\n",
+       "      <td>5813</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2310</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1523300141</th>\n",
+       "      <td>402101.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>1020</td>\n",
+       "      <td>1350</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1020</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>291310100</th>\n",
+       "      <td>400000.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2.50</td>\n",
+       "      <td>1600</td>\n",
+       "      <td>2388</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1600</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1523300157</th>\n",
+       "      <td>325000.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>1020</td>\n",
+       "      <td>1076</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1020</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>21613 rows × 12 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -754,6 +845,12 @@
        "5631500400  180000.0         2       1.00          770     10000     1.0   \n",
        "2487200875  604000.0         4       3.00         1960      5000     1.0   \n",
        "1954400510  510000.0         3       2.00         1680      8080     1.0   \n",
+       "...              ...       ...        ...          ...       ...     ...   \n",
+       "263000018   360000.0         3       2.50         1530      1131     3.0   \n",
+       "6600060120  400000.0         4       2.50         2310      5813     2.0   \n",
+       "1523300141  402101.0         2       0.75         1020      1350     2.0   \n",
+       "291310100   400000.0         3       2.50         1600      2388     2.0   \n",
+       "1523300157  325000.0         2       0.75         1020      1076     2.0   \n",
        "\n",
        "            waterfront  view  condition  grade  sqft_above  sqft_basement  \n",
        "id                                                                         \n",
@@ -761,21 +858,29 @@
        "6414100192           0     0          3      7        2170            400  \n",
        "5631500400           0     0          3      6         770              0  \n",
        "2487200875           0     0          5      7        1050            910  \n",
-       "1954400510           0     0          3      8        1680              0  "
+       "1954400510           0     0          3      8        1680              0  \n",
+       "...                ...   ...        ...    ...         ...            ...  \n",
+       "263000018            0     0          3      8        1530              0  \n",
+       "6600060120           0     0          3      8        2310              0  \n",
+       "1523300141           0     0          3      7        1020              0  \n",
+       "291310100            0     0          3      8        1600              0  \n",
+       "1523300157           0     0          3      7        1020              0  \n",
+       "\n",
+       "[21613 rows x 12 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.head()"
+    "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {
     "cell_style": "center",
     "hidden": true,
@@ -783,13 +888,28 @@
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>#sk-container-id-1 {color: black;background-color: white;}#sk-container-id-1 pre{padding: 0;}#sk-container-id-1 div.sk-toggleable {background-color: white;}#sk-container-id-1 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-1 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-1 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-1 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-1 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-1 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-1 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-1 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-1 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-1 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-1 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-1 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-1 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-1 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-1 div.sk-item {position: relative;z-index: 1;}#sk-container-id-1 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-1 div.sk-item::before, #sk-container-id-1 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-1 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-1 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-1 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-1 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-1 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-1 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-1 div.sk-label-container {text-align: center;}#sk-container-id-1 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-1 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LinearRegression()</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">LinearRegression</label><div class=\"sk-toggleable__content\"><pre>LinearRegression()</pre></div></div></div></div></div>"
+      ],
+      "text/plain": [
+       "LinearRegression()"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "X = None\n",
-    "y = None\n",
+    "X = df.drop('price', axis=1)\n",
+    "y = df['price']\n",
     "\n",
     "# Build the regression\n",
-    "None"
+    "lr = LinearRegression()\n",
+    "lr.fit(X,y)"
    ]
   },
   {
@@ -816,22 +936,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "cell_style": "center",
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "53170511676.6898 230587.31898499926\n",
+      "230587.31898499973\n"
+     ]
+    }
+   ],
    "source": [
     "# Calculate error\n",
-    "y_hat = None\n",
-    "sse = None\n",
-    "mse = None\n",
-    "rmse = None\n",
+    "y_hat = lr.predict(X)\n",
+    "sse = sum((y - y_hat) ** 2)\n",
+    "mse = sse/len(y)\n",
+    "rmse = mse ** 0.5\n",
     "\n",
-    "# Compare with sklearn\n"
+    "# Compare with sklearn\n",
+    "print(mse, rmse)\n",
+    "print(np.sqrt(mean_squared_error(y,y_hat)))"
    ]
   },
   {
@@ -992,9 +1123,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "dplearn",
+   "display_name": "learn-env",
    "language": "python",
-   "name": "dplearn"
+   "name": "learn-env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1006,7 +1137,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.11.5"
   },
   "toc": {
    "base_numbering": 1,
